--- a/packages/4.x/Di/lazy.html
+++ b/packages/4.x/Di/lazy.html
@@ -9,18 +9,18 @@ permalink: /packages/4.x/Di/lazy.html
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">1.1.7. Lazy Injection</th>
+            <th colspan="3" class="curr">2.1.7. Lazy Injection</th>
         </tr>
         <tr>
             <td class="prev"><a href="/packages/4.x/Di/services.html">Services</a></td>
-            <td class="parent">1.1. Aura.Di</th>
+            <td class="parent">2.1. Aura.Di</th>
             <td class="next"><a href="/packages/4.x/Di/factories.html">Instance Factories</a></td>
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-7">1.1.7. Lazy Injection</h1>
-<p>Unlike the <code>newInstance()</code> and <code>get()</code> methods, calling one of the <code>lazy*()</code> methods on the <em>Container</em> will <em>not</em> lock the <em>Container</em>. Using lazy injection is the preferred and recommended way to defines object values for <code>$params</code> and <code>$setters</code>, and to define services.</p>
-<h2 id="1-1-7-1">1.1.7.1. Lazy Instances</h2>
+<div id="section-main"><h1 id="2-1-7">2.1.7. Lazy Injection</h1>
+<p>Unlike the <code>newInstance()</code> and <code>get()</code> methods, calling one of the <code>lazy*()</code> methods on the <em>Container</em> will <em>not</em> lock the <em>Container</em>. Using lazy injection is the preferred and recommended way to define object values for <code>$params</code> and <code>$setters</code>, and to define services.</p>
+<h2 id="2-1-7-1">2.1.7.1. Lazy Instances</h2>
 <p>Thus far, we have used <code>newInstance()</code> to create objects through the <em>Container</em>.
 However, we usually don't want to create an object <em>right at that moment</em> when
 defining it. Instead, we almost always want to wait to create the object only
@@ -48,14 +48,14 @@ is instantiated. It will use the default <em>AnotherExample</em> injection value
     ]
 ));
 </code></pre>
-<h2 id="1-1-7-2">1.1.7.2. Lazy Services</h2>
-<h3 id="1-1-7-2-1">1.1.7.2.1. Setting</h3>
+<h2 id="2-1-7-2">2.1.7.2. Lazy Services</h2>
+<h3 id="2-1-7-2-1">2.1.7.2.1. Setting</h3>
 <p>As with object instances, we generally want to create a service instance only at the moment we <em>get</em> it, not at the moment we <em>set</em> it. To lazy-load a service, set the service using the <code>lazyNew()</code> method:</p>
 <pre><code class="language-php">// set the service as a lazy-loaded new instance
 $di-&gt;set('service_name', $di-&gt;lazyNew('Example'));
 </code></pre>
 <p>Now the service is created only when we we <code>get()</code> it, and not before. This lets us set as many services as we want, but only incur the overhead of creating the instances we actually use.</p>
-<h3 id="1-1-7-2-2">1.1.7.2.2. Getting</h3>
+<h3 id="2-1-7-2-2">2.1.7.2.2. Getting</h3>
 <p>Sometimes a class will need a service as one of its parameters. By way of example, the following class needs a database connection:</p>
 <pre><code class="language-php">class ExampleNeedsService
 {
@@ -70,11 +70,11 @@ $di-&gt;set('service_name', $di-&gt;lazyNew('Example'));
 <pre><code class="language-php">$di-&gt;params['ExampleNeedsService']['db'] = $di-&gt;lazyGet('db_service');
 </code></pre>
 <p>This keeps the service from being created until the very moment it is needed. If we never instantiate anything that needs the service, the service itself will never be instantiated.</p>
-<h3 id="1-1-7-2-3">1.1.7.2.3. Getting-and-Calling</h3>
+<h3 id="2-1-7-2-3">2.1.7.2.3. Getting-and-Calling</h3>
 <p>Sometimes it will be useful to retrieve the result of a method call to a shared service. To do so, use the <code>lazyGetCall()</code> method, passing the name of the service first, followed by the method name, and optionally followed by any arguments to the method.</p>
 <pre><code class="language-php">$di-&gt;params['ExampleNeedsFactoriedObject']['object'] = $di-&gt;lazyGetCall('factory_service', 'newInstance');
 </code></pre>
-<h2 id="1-1-7-3">1.1.7.3. Lazy Values</h2>
+<h2 id="2-1-7-3">2.1.7.3. Lazy Values</h2>
 <p>Sometimes we know that a parameter needs to be specified, but we don't know what it will be until later.  Perhaps it is the result of looking up an API key from an environment variable. In these and other cases, we can tell a constructor parameter or setter method to use a "lazy value" and then specify that value elsewhere.</p>
 <p>For example, we can configure the <em>Example</em> constructor parameters to use lazy values like so:</p>
 <pre><code class="language-php">$di-&gt;params['Example']['foo'] = $di-&gt;lazyValue('fooval');
@@ -87,7 +87,7 @@ $di-&gt;values['barval'] = 'lazy value for bar';
 <p>Lazy values can be lazy themselves:</p>
 <pre><code class="language-php">$di-&gt;values['fooval'] = $di-&gt;lazyGetCall('option_container', 'getFooOption');
 </code></pre>
-<h2 id="1-1-7-4">1.1.7.4. Lazy Include and Require</h2>
+<h2 id="2-1-7-4">2.1.7.4. Lazy Include and Require</h2>
 <p>Occasionally we will need to <code>include</code> a file that returns a value, such as data file that returns a PHP array:</p>
 <pre><code class="language-php">// /path/to/data.php
 return [
@@ -100,7 +100,7 @@ return [
 <pre><code class="language-php">$di-&gt;params['Example1']['data'] = $di-&gt;lazyInclude('/path/to/data.php');
 $di-&gt;params['Example2']['data'] = $di-&gt;lazyRequire('/path/to/data.php');
 </code></pre>
-<h2 id="1-1-7-5">1.1.7.5. Lazy Array</h2>
+<h2 id="2-1-7-5">2.1.7.5. Lazy Array</h2>
 <p>Sometimes you'll be working with code that expects an array of objects. If you want the objects within the array to be lazy, you can use the <code>$di-&gt;lazyArray()</code> method. This will iterate through your array and resolve any lazy objects before returning the array.</p>
 <pre><code class="language-php">$di-&gt;setters['Example']['addFoos'] = $di-&gt;lazyArray([
     $di-&gt;lazyNew('FirstFoo'),
@@ -128,12 +128,12 @@ array_unshift($copy, $di-&gt;lazyNew('FirstFoo'));
 // Reassign with new array
 $di-&gt;setters['Example']['addFoos'] = $di-&gt;lazyArray($copy);
 </code></pre>
-<h2 id="1-1-7-6">1.1.7.6. Lazy Callable</h2>
+<h2 id="2-1-7-6">2.1.7.6. Lazy Callable</h2>
 <p>Sometimes you'll be working with code that deals with callables. This code may expect to invoke the callable once, or many times. If you wanted to use a service in this situation, you can use the <code>lazyCallable</code> method. This will produce a callable that will lazily resolve other lazies, and ensure that all calls to the service are made appropriately.</p>
 <pre><code class="language-php">$di-&gt;params['Example']['foo'] = $di-&gt;lazyCallable($di-&gt;lazyGet('service_name'));
 $di-&gt;params['Example']['bar'] = $di-&gt;lazyCallable([$di-&gt;lazyNew('ServiceClass'), 'methodName']);
 </code></pre>
-<h2 id="1-1-7-7">1.1.7.7. Generic Lazy Calls</h2>
+<h2 id="2-1-7-7">2.1.7.7. Generic Lazy Calls</h2>
 <p>It may be that we have a complex bit of logic we need to execute for a value. If none of the existing <code>$di-&gt;lazy*()</code> methods meet our needs, we can wrap an anonymous function or other callable in a <code>lazy()</code> call, and the callable's return will be used as the value.</p>
 <pre><code class="language-php">$di-&gt;params['Example']['foo'] = $di-&gt;lazy(function () {
     // complex calculations, and then:
@@ -174,9 +174,9 @@ $di-&gt;set('service', $di-&gt;lazy([$di-&gt;lazyNew('ServiceClass'), 'methodNam
             <td class="next"><a href="/packages/4.x/Di/factories.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">1.1.6. Services</td>
-            <td class="parent">1.1. Aura.Di</td>
-            <td class="next">1.1.8. Instance Factories</td>
+            <td class="prev">2.1.6. Services</td>
+            <td class="parent">2.1. Aura.Di</td>
+            <td class="next">2.1.8. Instance Factories</td>
         </tr>
     </table>
 </nav>
